@@ -1,3 +1,14 @@
-Run "python make.py" to prepare the file necessary to build a package.
+# UberSquare
 
-You'll need to submit the 3 resulting files to the extras-devel autobuilder, or use a Debian-based machine in order to compile it (I've never done the latter, consult the wiki will help).
+Ubersquare is a foursquare application maemo, written in Python 2.5 using PySide.
+
+## Building
+
+To build a .deb package you must follow two steps:
+
+1. Run "python make.py" to prepare the necesary files.
+2. You have two choices: submit the resulting files to the maemo extras autobuilder (and have the resulting package pushed to the extras-devel repo), or using debhelper.  Regrettably, debhelper is not available for maemo, so you'll need a Debian-based computer in order to do this.  Consult the maemo wiki for details on how to do this.
+
+## Running
+
+To run from source, just change to the ubersquare directory, and run "python gui.py".
